2000-03-07  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/simple.h: Declare simple_LTX_query_interface.

	* lib/simple.c (struct simple_module): New struct.
	(simple_draw, simple_set_up, simple_get_property,
	simple_set_property, simple_get_property_names, simple_close,
	simple_open): New functions.
	(simple_LTX_query_interface): New function.

	* include/rglclockmod.h: Rename query_module_function to
	query_interface_function.
	(union rglclockmod_interface): Rename from rglclock_interface.
	(union rglclockmod_interface): Remove member version.
	(struct rglclockmod_version_1): Renamed from rglclockmod_1.
	Remove member version.

	* NEWS: Updated.

2000-03-06  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* lib/module.cc: Include <rglclockmod.h>.

	* lib/simple.c: Include <rglclockmod.h>.

	* include/Makefile.am (include_HEADERS): New macro.

	* include/rglclockmod.h: New file.

	* bin/main.cc (class clock_app): Remove members edit_options and
	dialog.  Add new member show_options_dialog.
	(edit_options): Removed.
	(handle_options_command): New function.
	(create_window): Use handle_options_command for menu.
	(clock_app): Remove initialization of the removed member.

	* lib/glclock.cc (show_options_dialog): New function.
	(glclock): Initialize options.

	* include/glclock.h (class about_dialog): Removed.
	(class clock_options_dialog): Moved before class glclock.
	(class glclock): Add new member show_options_dialog.
	(class glclock): Add new member options.

	* lib/about.cc: Removed.

	* lib/Makefile.am (libclock_a_SOURCES): Remove about.cc.

	* lib/simple.c: Modify the material parameters.
	(simple_init): Set the ambient parameters for lights.

2000-03-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* bin/Makefile.am (EXTRA_DIST): Add options-0.dtd.

	* NEWS: Updated.

	* bin/main.cc (show_about_dialog): Remove _() for version_format.

	* configure.in (ALL_LINGUAS): Changed.

	* bin/main.cc (PROGRAM, COPYRIGHT_YEAR): New macros.