@@ -69,7 +69,7 @@ GtkWidget *
 glclock::create_widget()
 {
   GtkWidget *drawing_area = gtk_drawing_area_new();
-  gtk_drawing_area_size(GTK_DRAWING_AREA(drawing_area), 100, 100);
+  gtk_drawing_area_size(GTK_DRAWING_AREA(drawing_area), 160, 160);
   gtk_signal_connect(GTK_OBJECT(drawing_area), "destroy",
 		     GTK_SIGNAL_FUNC(remove_widget), this);
   gtk_widget_set_events(drawing_area,
